Remove custom distance methods